apps/base/pgadmin/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pgadmin-virtualservice
  namespace: pgadmin
spec:
  gateways:
    - istio-ingress/wildcard-gateway
  hosts:
    - pgadmin.${cluster_subdomain}
  http:
    - route:
        - destination:
            host: pgadmin4.pgadmin.svc.cluster.local
            port:
              number: 80
